# vanilla-installer-python

./: .all-contributorsrc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SECURITY.md  credits.md  download.md  for-devs.md  index.md  installation.md  mkdocs.yml  poetry.toml  pylint.toml  pyproject.toml  requirements.txt  support.md  tutorial.md  usage.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  enhancement.yml  meta.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  git-repo-sync.yml  lint.yml  pylint.yml  release.yml
3.10/: Pipfile  vanilla-installer
3.11/: Pipfile  pylint.toml
3.8/: Pipfile
3.9/: Pipfile
changelogs/: README.md  template.md
changelogs/0.1.0/: full.md  summary.md
changelogs/0.2.0/: full.md  summary.md
changelogs/0.2.1/: full.html
changelogs/0.2.2/: full.md  summary.md
changelogs/1.0/: full.md
changelogs/1.0.0-b1/: full.md  summary.md
data/: mc-path.txt
docs/: credits.md  for-devs.md  index.md  planned-features.md  support.md
docs/changelogs/: README.md  template.md
docs/meta/: versions.json
docs/reference/: cli.md  gui.md  log.md  main.md  theme.md
envs/3.10/: Pipfile
envs/3.11/: Pipfile
envs/3.8/: Pipfile
envs/3.9/: Pipfile
install/: debian-based.sh  linux-mac.sh  linux.sh  mac.sh  macos.sh  pipreqs-3-10.sh  pipreqs-py3.10.sh  start-py3.10.sh  start.sh  windows.bat
media/: icon.icns
reference/: cli.md  gui.md  index.md  log.md
scripts/: install.sh
tests/: args.py  fabric_install.sh  font.py  notifier.py
vanilla-installer/: cli.py  gui.py  main.py  theme.py
vanilla_installer/: __init__.py  __main__.py  cli.py  config.py  gui.py  i18n.py  log.py  main.py  theme.py
vanilla_installer/assets/: versions.json
vanilla_installer/assets/fonts/: fonts.qrc
vanilla_installer/assets/lang/: en_us.json
