[tool.poetry]
name = "vanilla-installer"
version = "v1.0.0-dev16"
description = "An installer of Fabulously Optimized for the vanilla launcher."
authors = [
    "osfanbuff63 <osfanbuff63@osfanbuff63.tech>",
    "nsde <mail@onlix.me>"
]
documentation = "https://fabulously-optimized.gitbook.io/vanilla-installer"
homepage = "https://fabulously-optimized.gitbook.io/vanilla-installer"
repository = "https://github.com/Fabulously-Optimized/vanilla-installer"
license = "MIT"
readme = "README.md"
packages = [{include = "vanilla_installer"}]
include = [
    "./vanilla_installer/assets/**"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<=3.11.*"
requests = "^2.28.1"
tomli = "^2.0.1"
darkdetect = "^0.7.1"
minecraft-launcher-lib = "^5.2"
pyside6 = {version = "^6.4.1", optional = true}
asyncclick = "^8.1.3.4"
anyio = "^3.6.2" # asyncclick seems to bug without anyio

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
black = "^22.10.0"
# cx-Freeze = "^6.13.1"
# install cx-Freeze manually on python < 3.11
# however official [release] builds will be built on python >=3.11
# (this is a workaround until cx-Freeze releases 6.14.0)
cx-freeze = {url = "https://marcelotduarte.github.io/packages/cx-freeze/cx_Freeze-6.14.0.dev1-cp311-cp311-win_amd64.whl", python = "3.11"}


[tool.poetry.group.ci.dependencies]
flake8 = "^6.0.0"

[tool.poetry.scripts]
vanilla-installer = {callable = "vanilla_installer:cli.vanilla_installer"}
vanilla-installer-gui = {callable = "vanilla_installer:gui.run", extras = ["gui"]}

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Fabulously-Optimized/vanilla-installer/issues"

[tool.poetry.extras]
gui = ["pyside6"]

[tool.poetry_bumpversion.file."vanilla_installer/__init__.py"]
[tool.poetry_bumpversion.file."vanilla_installer/main.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
