[tool.poetry]
name = "vanilla-installer"
version = "v0.1.0"
description = "An installer of Fabulously Optimized for the vanilla launcher."
authors = [
    "osfanbuff63 <osfanbuff63@osfanbuff63.tech>",
    "nsde <mail@onlix.me>"
]
documentation = "https://fabulously-optimized.gitbook.io/vanilla-installer"
homepage = "https://fabulously-optimized.gitbook.io/vanilla-installer"
repository = "https://github.com/Fabulously-Optimized/vanilla-installer"
license = "MIT"
readme = "README.md"
packages = [{include = "vanilla_installer"}]
include = [
    "./vanilla_installer/assets/**"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<=3.11.1"
requests = "^2.28.2"
tomli = "^2.0.1"
darkdetect = "^0.8.0"
minecraft-launcher-lib = "^5.3"
pyside6 = {version = "^6.4.2", optional = true}
asyncclick = "^8.1.3.4"
anyio = "^3.6.2" # asyncclick seems to bug without anyio, despite being a dep
tomlkit = "^0.11.6"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.1"
black = "^22.10.0"
isort = "^5.11.4"


[tool.poetry.group.ci.dependencies]
flake8 = "^6.0.0"


[tool.poetry.group.compile.dependencies]
nuitka = {version = "^1.4", python = "<=3.10"}
ordered-set = "^4.1.0"
zstandard = "^0.19.0"
imageio = "^2.25.0"
pyproject-appimage = {version = "^1.0", python = ">=3.9,<3.12"}

[tool.poetry.scripts]
vanilla-installer = {callable = "vanilla_installer:cli.vanilla_installer"}
vanilla-installer-gui = {callable = "vanilla_installer:gui.run", extras = ["gui"]}

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Fabulously-Optimized/vanilla-installer/issues"

[tool.poetry.extras]
gui = ["pyside6"]

[tool.poetry_bumpversion.file."vanilla_installer/__init__.py"]
[tool.poetry_bumpversion.file."vanilla_installer/main.py"]

[tool.pyproject-appimage]
script = "vanilla-installer"
output = "VanillaInstaller-v0.1.1.AppImage"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
